_mocha/china/app/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "80"
    alb.ingress.kubernetes.io/success-codes: "302"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
  name: wp
  namespace: app
spec:
  selector:
    app: wp
  type: ClusterIP
  ports:
  - name: wp
    protocol: TCP
    port: 80
    targetPort: 80
